--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "ws": "^8.11.0"
   },
   "repository": "https://github.com/zakaton/ar-camera.git",
